feat: footer web responsive and with social net icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> <!--Para agregar fuente montserrat y nunito sans-->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--Para agregar fuente montserrat y nunito sans-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap" rel="stylesheet"> <!--En el css tendrian que hacer un cambio a sus secciones para aplicar la fuente-->
+        <script src="https://kit.fontawesome.com/1f197d46d5.js" crossorigin="anonymous"></script> <!-- Conecta con fontawesome para usar iconos -->
     </head>
     <body>
         <header>
@@ -110,7 +111,7 @@
                     <br>
                     <br>
                     <div class="parrafo1">
-                        <img src="assets/images/eye-scan.png" alt="Icono" class="imagen-icono">
+                        <img src="assets/images/eye-scanner 1.svg" alt="Icono" class="imagen-icono1">
                         <h4>IDENTIFICACION DE PLANTAS MEDIANTE ESCANEO</h4>
                         <p>Con nuestro sistema de escaneo será mucho <!-- <br>  -->
                             más sencillo el poder identificar plantas de <!-- <br>  -->
@@ -301,7 +302,7 @@
             <img id="back-to-top-img" src="assets/images/whiteUpArrow.png" alt="Flecha hacia arriba">    
         </div>
 
-        <!--Pie de Pagina-->
+        <!--Seccion contactanos -->
         <div id="contact" class="fondo_marron">
             <div class="container">
               <div class="cuadro_grande">
@@ -317,8 +318,11 @@
                 </div>
               </div>
             </div>
-          </div>
+        </div>
+        
+        <!--Pie de Pagina-->
           <footer class="footer">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div class="contenedor1">
 
                 <div class="barra1"> 
@@ -329,10 +333,10 @@
                     </p>
                     <br>
                     <nav class="navegacion">
-                        <a href= "nosotros.html" class="navegacion__enlace">Facebook</a>
-                        <a href= "cursos.html" class="navegacion__enlace">Instagram</a>
-                        <a href= "https://www.youtube.com/channel/UC6_tM7CLofNF9YIjQ8z5AJw" class="navegacion__enlace">Youtube</a>
-                        <a href= "contacto.html" class="navegacion__enlace">Twitter</a>
+                        <a href= "https://www.facebook.com/" class="navegacion__enlace"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.instagram.com/" class="navegacion__enlace1"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.youtube.com/channel/UC6_tM7CLofNF9YIjQ8z5AJw" class="navegacion__enlace1"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+                        <a href= "https://twitter.com/" class="navegacion__enlace1"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
                     </nav>
                     </a>
                 </div>
@@ -350,7 +354,10 @@
                  <div class="barra3"> 
                     <a class="descargar">
                         <h3>DESCARGA NUESTRA APP</h3>
-                        <img src="assets/images/descargas2.png" alt="Tiendas donde descargar la app">
+                        <!-- <img src="assets/images/descargas2.png" alt="Tiendas donde descargar la app"> -->
+                        <a href="https://play.google.com" target="_blank"><img src="assets/images/googlePlayStore.png" class="store-button" alt="Google Play Store"></a>
+                        <a href="https://www.apple.com/app-store/" target="_blank"><img src="assets/images/appleAppStore.png" class="store-button" alt="Apple App Store"></a>
+                        <a href="https://appgallery.huawei.com" target="_blank"><img src="assets/images/huaweiAppGallery.png" class="store-button" alt="Huawei App Gallery"></a>
                      </a>
                  </div>
            </div>
