--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
         <!--Seccion contactanos -->
         <div id="contact" class="fondo_marron">
-            <div class="container">
+            <div class="contact-container">
               <div class="cuadro_grande">
                 <div class="union_iconos">
                   <div class="imagen_email">
