feat: add text to speech

--- a/index.html
+++ b/index.html
@@ -367,5 +367,18 @@
 
         </footer>
         <!--Pie de Pagina-->
+        <script async src="https://widget.websitevoice.com/9fWpC3hSVfYrlsqdtLO4eQ"></script>
+        <script>
+        window.wvData=window.wvData||{};function wvtag(a,b){wvData[a]=b;}
+        wvtag('id', '9fWpC3hSVfYrlsqdtLO4eQ');
+        wvtag('language', 'es-MX');
+        wvtag('gender', 'female');
+        wvtag('enable-downloads', true);
+        wvtag('widget-style', {
+            backgroundColor: '#7e8925',
+            showTooltip: true,
+            tooltipText: 'Leer contenido'
+        });
+        </script>
     </body>
 </html>
