--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         </div>
         
         <!--Pie de Pagina-->
-          <footer class="footer">
+          <footer id="footer" class="footer">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div class="contenedor1">
 
