feat: Us section added

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                 <a href="#our-app"><li>Nuestra App</li></a>
                 <a href="#features"><li>Características</li></a>
                 <a href="#preview"><li>Interfaz</li></a>
-                <a href="#contact"><li>Contactanos</li></a>
                 <a href="#planes"><li>Nuestros Planes</li></a>
+                <a href="#us"><li>Nosotros</li></a>
+                <a href="#contact"><li>Contactanos</li></a>
             </ul>
             <li class="get-app">
                 <a href="#download"><button class="get-app-button">DESCARGAR</button></a>
@@ -204,53 +205,67 @@
          </section>
         <!-- Cuarta parte del Cuerpo - Fin de Slider-->
 
-<!--Quinta parte del Cuerpo - Nuestros Planes-->
-<section id="planes_voz" class="plans-container">
-    <h2>NUESTROS PLANES</h2>
-    <br>
-    <br>
-    <div id="planes" class="plans">
-      <div class="plan">
-        <div class="plan-box">
-          <h2>$0 / mes</h2>
-          <p>Gratuito</p>
-          <ul class="checklist">
-            <li><span class="checkmark"></span> Escaneo para identificación de plantas</li>
-            <li><span class="checkmark"></span> Recordatorio del riego</li>
-            <li><span class="checkmark"></span> Aviso sobre tiendas y viveros cercanos a ti</li>
-            <li><span class="checkmark"></span> Comparación de precios de las plantas e implementos</li>
-            <li><span class="checkmark"></span> Indicación sobre las mejores temporadas para siembra de plantas</li>
-          </ul>
-          <div href="#download" class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
+        <!--Quinta parte del Cuerpo - Nuestros Planes-->
+    <section id="planes_voz" class="plans-container">
+        <h2>NUESTROS PLANES</h2>
+        <br>
+        <br>
+        <div id="planes" class="plans">
+          <div class="plan">
+            <div class="plan-box">
+                <h2>$0 / mes</h2>
+                <p>Gratuito</p>
+                <ul class="checklist">
+                    <li><span class="checkmark"></span> Escaneo para identificación de plantas</li>
+                    <li><span class="checkmark"></span> Recordatorio del riego</li>
+                    <li><span class="checkmark"></span> Aviso sobre tiendas y viveros cercanos a ti</li>
+                    <li><span class="checkmark"></span> Comparación de precios de las plantas e implementos</li>
+                    <li><span class="checkmark"></span> Indicación sobre las mejores temporadas para siembra de plantas</li>
+                </ul>
+                <div href="#download" class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
+            </div>
         </div>
-      </div>
 
-      <div class="plan">
-        <div class="plan-box">
-          <h2>$0.99 / mes</h2>
-          <p>Pro</p>
-          <ul class="checklist">
-            <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
-            <li><span class="checkmark"></span> Consultas con tus horticultores expertos</li>
-          </ul>
-          <div href="#download" class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
+        <div class="plan">
+            <div class="plan-box">
+                <h2>$0.99 / mes</h2>
+                <p>Pro</p>
+                <ul class="checklist">
+                    <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
+                    <li><span class="checkmark"></span> Consultas con tus horticultores expertos</li>
+                </ul>
+                <div href="#download" class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
+            </div>
         </div>
-      </div>
 
-      <div class="plan">
-        <div class="plan-box">
-          <h2>$3.00 / mes</h2>
-          <p>Premium</p>
-          <ul class="checklist">
-            <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
-            <li><span class="checkmark"></span> Sin anuncios</li>
-          </ul>
-          <div class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
+        <div class="plan">
+            <div class="plan-box">
+                <h2>$3.00 / mes</h2>
+                <p>Premium</p>
+                <ul class="checklist">
+                    <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
+                    <li><span class="checkmark"></span> Sin anuncios</li>
+                </ul>
+                <div class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
-<!-- Quinta parte del Cuerpo - Fin de Nuestros Planes-->
+    </section>
+    <!-- Quinta parte del Cuerpo - Fin de Nuestros Planes-->
+
+        <!--Sexta parte del Cuerpo - Seccion Nosotros-->
+        <section id="nosotros">
+            <div id="us" class="us_container">
+                <br><br><br><br>
+                <h1>NOSOTROS</h1>
+                <div class="texto_nosotros">
+                    <p>A continuación encontrarás un video de presentación de nuestro equipo donde contamos el proceso que hemos seguido para la creación de nuestro start-up y las experiencias que hemos tenido.</p>
+                </div>
+                <br><br><br><br><br><br><br><br><br>
+                <iframe width="860" height="515" src="https://www.youtube.com/embed/OSL7b3H2bQQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            </div>
+        </section>
+        <!--Quinta parte del Cuerpo - Fin Seccion Nosotros-->
 
         <!-- Ultima parte del cuerpo - Descarga la app -->
          <section id="descargar">
@@ -333,10 +348,10 @@
                     </p>
                     <br>
                     <nav class="navegacion">
-                        <a href= "https://www.facebook.com/" class="navegacion__enlace"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
-                        <a href= "https://www.instagram.com/" class="navegacion__enlace1"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
-                        <a href= "https://www.youtube.com/channel/UC6_tM7CLofNF9YIjQ8z5AJw" class="navegacion__enlace1"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
-                        <a href= "https://twitter.com/" class="navegacion__enlace1"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.facebook.com/" class="navegacion__enlace" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.instagram.com/" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.youtube.com/channel/UC6_tM7CLofNF9YIjQ8z5AJw" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+                        <a href= "https://twitter.com/" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
                     </nav>
                     </a>
                 </div>
@@ -348,6 +363,7 @@
                             <a href=" #features"><li>Caracteristicas</li></a>
                             <a href=" #preview"><li>Interfaz</li></a>
                             <a href=" #planes"><li>Nuestros planes</li></a>
+                            <a href=" #us"><li>Nosotros</li></a>
                         </nav>
                      </a>
                  </div>
