--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <iframe class="responsive-video" width="560" height="315" src="https://www.youtube.com/embed/yP6-mvdhwpw?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="responsive-video" width="560" height="315" src="https://www.youtube.com/embed/yP6-mvdhwpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
                </section>
         <!--Segunda parte del Cuerpo-->
@@ -208,8 +208,7 @@
         <!--Quinta parte del Cuerpo - Nuestros Planes-->
     <section id="planes_voz" class="plans-container">
         <h2>NUESTROS PLANES</h2>
-        <br>
-        <br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div id="planes" class="plans">
           <div class="plan">
             <div class="plan-box">
@@ -250,6 +249,7 @@
             </div>
         </div>
     </section>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <!-- Quinta parte del Cuerpo - Fin de Nuestros Planes-->
 
         <!--Sexta parte del Cuerpo - Seccion Nosotros-->
@@ -261,8 +261,8 @@
                     <p>A continuación encontrarás un video de presentación de nuestro equipo donde contamos el proceso que hemos seguido para la creación de nuestro start-up y las experiencias que hemos tenido.</p>
                 </div>
                 <br><br><br><br><br><br><br><br><br>
-                <iframe width="860" height="515" src="https://www.youtube.com/embed/OSL7b3H2bQQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <iframe class="responsive-video" width="860" height="515" src="https://www.youtube.com/embed/OSL7b3H2bQQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
         </section>
         <!--Quinta parte del Cuerpo - Fin Seccion Nosotros-->
@@ -348,10 +348,10 @@
                     </p>
                     <br>
                     <nav class="navegacion">
-                        <a href= "https://www.facebook.com/" class="navegacion__enlace" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
-                        <a href= "https://www.instagram.com/" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.facebook.com/profile.php?id=100093699925173" class="navegacion__enlace" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
+                        <a href= "https://www.instagram.com/plantae_app/" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
                         <a href= "https://www.youtube.com/channel/UC6_tM7CLofNF9YIjQ8z5AJw" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
-                        <a href= "https://twitter.com/" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
+                        <a href= "https://twitter.com/Plantae_app" class="navegacion__enlace1" target="_blank"><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></a>
                     </nav>
                     </a>
                 </div>
